--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.4.1
 text-unidecode==1.3
-urllib3==1.26.4
+urllib3==2.0.7
 uWSGI==2.0.19.1
 django-crontab==0.7.1
 django-celery-results==2.4.0
@@ -35,3 +35,4 @@ Pillow==9.5.0
 django-redis==5.4.0
 pydantic==2.5.3
 django-debug-toolbar==3.8.1
+sentry-sdk==2.14.0
