--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ pydantic==2.5.3
 django-debug-toolbar==3.8.1
 sentry-sdk==2.14.0
 django-constance==3.1.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
