--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,4 @@ google-api-python-client==2.149.0
 google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.0
-elasticsearch-dsl==8.12.0
+django-elasticsearch-dsl==7.4
