--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,6 @@ six==1.15.0
 sqlparse==0.4.1
 text-unidecode==1.3
 urllib3==2.0.7
-uWSGI==2.0.19.1
 django-crontab==0.7.1
 django-celery-results==2.4.0
 celery==5.2.7
@@ -42,3 +41,4 @@ google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.0
 django-elasticsearch-dsl==7.4
+gunicorn==21.2.0
